y.output
Terminals unused in grammar

   ER_IFL
   ER_IDG
   OP_DF
   OP_GE
   OP_LE
   OP_GR
   OP_LS
   OP_PL
   OP_MI
   OP_ML
   OP_DV
   OP_EQ
   SB_PF
   SB_PO
   SB_PC
   ER_NMF
   ER_CIN
   ER_CNF
   END
   CHAR
   PROCEDURE
   IF
   ELSE
   READLN
   WRITELN
   REPEAT
   THEN
   UNTIL
   WHILE
   FUNCTION


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: PROGRAM IDENT SB_PV $@1 corpo

    3 $@2: /* empty */

    4 program: PROGRAM error SB_PV $@2 corpo

    5 $@3: /* empty */

    6 program: error IDENT SB_PV $@3 corpo

    7 corpo: dc

    8 dc: dc_c dc_v BEG

    9 dc_c: CONST IDENT OP_AT numero SB_PV dc_c
   10     | error IDENT OP_AT error SB_PV
   11     | CONST error OP_AT numero SB_PV
   12     | CONST IDENT OP_AT error SB_PV
   13     | /* empty */

   14 $@4: /* empty */

   15 dc_v: VAR variaveis SB_DP tipo_var SB_PV $@4 dc_v
   16     | /* empty */

   17 tipo_var: INTEGER
   18         | REAL

   19 variaveis: IDENT mais_var

   20 mais_var: SB_VG variaveis
   21         | /* empty */

   22 numero: NRO_REAL
   23       | NRO_INTEIRO


Terminals, with rules where they appear

$end (0) 0
error (256) 4 6 10 11 12
ER_IFL (258)
NRO_REAL (259) 22
IDENT (260) 2 6 9 10 12 19
ER_IDG (261)
OP_AT (262) 9 10 11 12
OP_DF (263)
OP_GE (264)
OP_LE (265)
OP_GR (266)
OP_LS (267)
OP_PL (268)
OP_MI (269)
OP_ML (270)
OP_DV (271)
OP_EQ (272)
SB_PV (273) 2 4 6 9 10 11 12 15
SB_PF (274)
SB_DP (275) 15
SB_VG (276) 20
SB_PO (277)
SB_PC (278)
ER_NMF (279)
ER_CIN (280)
ER_CNF (281)
NRO_INTEIRO (282) 23
PROGRAM (283) 2 4
BEG (284) 8
END (285)
CONST (286) 9 11 12
VAR (287) 15
REAL (288) 18
INTEGER (289) 17
CHAR (290)
PROCEDURE (291)
IF (292)
ELSE (293)
READLN (294)
WRITELN (295)
REPEAT (296)
THEN (297)
UNTIL (298)
WHILE (299)
FUNCTION (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 2 4 6, on right: 0
$@1 (48)
    on left: 1, on right: 2
$@2 (49)
    on left: 3, on right: 4
$@3 (50)
    on left: 5, on right: 6
corpo (51)
    on left: 7, on right: 2 4 6
dc (52)
    on left: 8, on right: 7
dc_c (53)
    on left: 9 10 11 12 13, on right: 8 9
dc_v (54)
    on left: 15 16, on right: 8 15
$@4 (55)
    on left: 14, on right: 15
tipo_var (56)
    on left: 17 18, on right: 15
variaveis (57)
    on left: 19, on right: 15 20
mais_var (58)
    on left: 20 21, on right: 19
numero (59)
    on left: 22 23, on right: 9 11


state 0

    0 $accept: . program $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    program  go to state 3


state 1

    6 program: error . IDENT SB_PV $@3 corpo

    IDENT  shift, and go to state 4


state 2

    2 program: PROGRAM . IDENT SB_PV $@1 corpo
    4        | PROGRAM . error SB_PV $@2 corpo

    error  shift, and go to state 5
    IDENT  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    6 program: error IDENT . SB_PV $@3 corpo

    SB_PV  shift, and go to state 8


state 5

    4 program: PROGRAM error . SB_PV $@2 corpo

    SB_PV  shift, and go to state 9


state 6

    2 program: PROGRAM IDENT . SB_PV $@1 corpo

    SB_PV  shift, and go to state 10


state 7

    0 $accept: program $end .

    $default  accept


state 8

    6 program: error IDENT SB_PV . $@3 corpo

    $default  reduce using rule 5 ($@3)

    $@3  go to state 11


state 9

    4 program: PROGRAM error SB_PV . $@2 corpo

    $default  reduce using rule 3 ($@2)

    $@2  go to state 12


state 10

    2 program: PROGRAM IDENT SB_PV . $@1 corpo

    $default  reduce using rule 1 ($@1)

    $@1  go to state 13


state 11

    6 program: error IDENT SB_PV $@3 . corpo

    error  shift, and go to state 14
    CONST  shift, and go to state 15

    BEG  reduce using rule 13 (dc_c)
    VAR  reduce using rule 13 (dc_c)

    corpo  go to state 16
    dc     go to state 17
    dc_c   go to state 18


state 12

    4 program: PROGRAM error SB_PV $@2 . corpo

    error  shift, and go to state 14
    CONST  shift, and go to state 15

    BEG  reduce using rule 13 (dc_c)
    VAR  reduce using rule 13 (dc_c)

    corpo  go to state 19
    dc     go to state 17
    dc_c   go to state 18


state 13

    2 program: PROGRAM IDENT SB_PV $@1 . corpo

    error  shift, and go to state 14
    CONST  shift, and go to state 15

    BEG  reduce using rule 13 (dc_c)
    VAR  reduce using rule 13 (dc_c)

    corpo  go to state 20
    dc     go to state 17
    dc_c   go to state 18


state 14

   10 dc_c: error . IDENT OP_AT error SB_PV

    IDENT  shift, and go to state 21


state 15

    9 dc_c: CONST . IDENT OP_AT numero SB_PV dc_c
   11     | CONST . error OP_AT numero SB_PV
   12     | CONST . IDENT OP_AT error SB_PV

    error  shift, and go to state 22
    IDENT  shift, and go to state 23


state 16

    6 program: error IDENT SB_PV $@3 corpo .

    $default  reduce using rule 6 (program)


state 17

    7 corpo: dc .

    $default  reduce using rule 7 (corpo)


state 18

    8 dc: dc_c . dc_v BEG

    VAR  shift, and go to state 24

    $default  reduce using rule 16 (dc_v)

    dc_v  go to state 25


state 19

    4 program: PROGRAM error SB_PV $@2 corpo .

    $default  reduce using rule 4 (program)


state 20

    2 program: PROGRAM IDENT SB_PV $@1 corpo .

    $default  reduce using rule 2 (program)


state 21

   10 dc_c: error IDENT . OP_AT error SB_PV

    OP_AT  shift, and go to state 26


state 22

   11 dc_c: CONST error . OP_AT numero SB_PV

    OP_AT  shift, and go to state 27


state 23

    9 dc_c: CONST IDENT . OP_AT numero SB_PV dc_c
   12     | CONST IDENT . OP_AT error SB_PV

    OP_AT  shift, and go to state 28


state 24

   15 dc_v: VAR . variaveis SB_DP tipo_var SB_PV $@4 dc_v

    IDENT  shift, and go to state 29

    variaveis  go to state 30


state 25

    8 dc: dc_c dc_v . BEG

    BEG  shift, and go to state 31


state 26

   10 dc_c: error IDENT OP_AT . error SB_PV

    error  shift, and go to state 32


state 27

   11 dc_c: CONST error OP_AT . numero SB_PV

    NRO_REAL     shift, and go to state 33
    NRO_INTEIRO  shift, and go to state 34

    numero  go to state 35


state 28

    9 dc_c: CONST IDENT OP_AT . numero SB_PV dc_c
   12     | CONST IDENT OP_AT . error SB_PV

    error        shift, and go to state 36
    NRO_REAL     shift, and go to state 33
    NRO_INTEIRO  shift, and go to state 34

    numero  go to state 37


state 29

   19 variaveis: IDENT . mais_var

    SB_VG  shift, and go to state 38

    $default  reduce using rule 21 (mais_var)

    mais_var  go to state 39


state 30

   15 dc_v: VAR variaveis . SB_DP tipo_var SB_PV $@4 dc_v

    SB_DP  shift, and go to state 40


state 31

    8 dc: dc_c dc_v BEG .

    $default  reduce using rule 8 (dc)


state 32

   10 dc_c: error IDENT OP_AT error . SB_PV

    SB_PV  shift, and go to state 41


state 33

   22 numero: NRO_REAL .

    $default  reduce using rule 22 (numero)


state 34

   23 numero: NRO_INTEIRO .

    $default  reduce using rule 23 (numero)


state 35

   11 dc_c: CONST error OP_AT numero . SB_PV

    SB_PV  shift, and go to state 42


state 36

   12 dc_c: CONST IDENT OP_AT error . SB_PV

    SB_PV  shift, and go to state 43


state 37

    9 dc_c: CONST IDENT OP_AT numero . SB_PV dc_c

    SB_PV  shift, and go to state 44


state 38

   20 mais_var: SB_VG . variaveis

    IDENT  shift, and go to state 29

    variaveis  go to state 45


state 39

   19 variaveis: IDENT mais_var .

    $default  reduce using rule 19 (variaveis)


state 40

   15 dc_v: VAR variaveis SB_DP . tipo_var SB_PV $@4 dc_v

    REAL     shift, and go to state 46
    INTEGER  shift, and go to state 47

    tipo_var  go to state 48


state 41

   10 dc_c: error IDENT OP_AT error SB_PV .

    $default  reduce using rule 10 (dc_c)


state 42

   11 dc_c: CONST error OP_AT numero SB_PV .

    $default  reduce using rule 11 (dc_c)


state 43

   12 dc_c: CONST IDENT OP_AT error SB_PV .

    $default  reduce using rule 12 (dc_c)


state 44

    9 dc_c: CONST IDENT OP_AT numero SB_PV . dc_c

    error  shift, and go to state 14
    CONST  shift, and go to state 15

    BEG  reduce using rule 13 (dc_c)
    VAR  reduce using rule 13 (dc_c)

    dc_c  go to state 49


state 45

   20 mais_var: SB_VG variaveis .

    $default  reduce using rule 20 (mais_var)


state 46

   18 tipo_var: REAL .

    $default  reduce using rule 18 (tipo_var)


state 47

   17 tipo_var: INTEGER .

    $default  reduce using rule 17 (tipo_var)


state 48

   15 dc_v: VAR variaveis SB_DP tipo_var . SB_PV $@4 dc_v

    SB_PV  shift, and go to state 50


state 49

    9 dc_c: CONST IDENT OP_AT numero SB_PV dc_c .

    $default  reduce using rule 9 (dc_c)


state 50

   15 dc_v: VAR variaveis SB_DP tipo_var SB_PV . $@4 dc_v

    $default  reduce using rule 14 ($@4)

    $@4  go to state 51


state 51

   15 dc_v: VAR variaveis SB_DP tipo_var SB_PV $@4 . dc_v

    VAR  shift, and go to state 24

    $default  reduce using rule 16 (dc_v)

    dc_v  go to state 52


state 52

   15 dc_v: VAR variaveis SB_DP tipo_var SB_PV $@4 dc_v .

    $default  reduce using rule 15 (dc_v)
